--- a/index.html
+++ b/index.html
@@ -10,44 +10,44 @@
 </head>
 <body>
 <div id="exercise">
-  <!-- 1) Fill the <p> below with your Name and Age - using Interpolation -->
+  <!-- ToDo 1: Fill the <p> below with your Name and Age - using Interpolation -->
   <p>VueJS is pretty cool - YOUR_NAME (AGE)</p>
 
-  <!-- 2) Fill the <p> below with your age, multiplied by 3 -->
+  <!-- ToDo 2: Fill the <p> below with your age, multiplied by 3 -->
   <p></p>
 
-  <!-- 3) Call a function to output, in the <p> below, a random float between 0 and 1 (Math.random()) -->
+  <!-- ToDo 3: Call a function to output, in the <p> below, a random float between 0 and 1 (Math.random()) -->
   <p></p>
 
-  <!-- 4) Pre-Populate this input with your name (set the "value" attribute) -->
+  <!-- ToDo 4: Pre-Populate this input with your name (set the "value" attribute) -->
   <div>
     <input type="text">
   </div>
 
-  <!-- 5) Show an alert when the Button gets clicked -->
+  <!-- ToDo 5: Show an alert when the Button gets clicked -->
   <div>
     <button>Show Alert</button>
   </div>
 
-  <!-- 6) Listen to the "keydown" event and store the value in a data property (hint: event.target.value gives you the value) -->
+  <!-- ToDo 6: Listen to the "keydown" event and store the value in a data property (hint: event.target.value gives you the value) -->
   <div>
     <input type="text">
     <p>{{ value }}</p>
   </div>
   
-   <!-- 7) Start the Effect with the Button. The Effect should alternate the "highlight" or "shrink" class on each new setInterval tick (attach respective class to the div with id "effect" below) -->
+   <!-- ToDo 7: Start the Effect with the Button. The Effect should alternate the "highlight" or "shrink" class on each new setInterval tick (attach respective class to the div with id "effect" below) -->
  <div>
    <button @click="startEffect">Start Effect</button>
    <div id="effect"></div>
  </div>
   
-   <!-- 8) Create a simple progress bar with setInterval and style bindings. Start it by hitting the below button. -->
+   <!-- ToDo 8: Create a simple progress bar with setInterval and style bindings. Start it by hitting the below button. -->
  <div>
     <button v-on:click="startProgress">Start Progress</button>
     <div></div>
  </div>
   
- <!-- 9) Hook up the button to toggle the display of the two paragraphs. Use both v-if and v-show and inspect the elements to see the difference -->
+ <!-- ToDo 9: Hook up the button to toggle the display of the two paragraphs. Use both v-if and v-show and inspect the elements to see the difference -->
  <div>
    <button>Toggle</button>
    <p>You either see me ...</p>
@@ -56,7 +56,7 @@
    <p>...or me</p>
  </div>
 
- <!-- 10) Output an <ul> of array elements of your choice. Also print the index of each element. -->
+ <!-- ToDo 10: Output an <ul> of array elements of your choice. Also print the index of each element. -->
  <ul>
    <li></li>
  </ul>
