--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div id="exercise">
+  <!-- A CHANGE -->
   <!-- ToDo 1: Fill the <p> below with your Name and Age - using Interpolation -->
   <p>VueJS is pretty cool - YOUR_NAME (AGE)</p>
 
