--- a/index.html
+++ b/index.html
@@ -11,28 +11,31 @@
 <body>
 <div id="exercise">
   <!-- ToDo 1: Fill the <p> below with your Name and Age - using Interpolation -->
-  <p>VueJS is pretty cool - YOUR_NAME (AGE)</p>
+  <p>Problem 1 : VueJS is pretty cool - {{ name }} ({{age}})</p>
 
   <!-- ToDo 2: Fill the <p> below with your age, multiplied by 3 -->
-  <p></p>
+  <p>Problem 2 : Age multipliedby 3: {{ageMultiplied(3)}}</p>
 
   <!-- ToDo 3: Call a function to output, in the <p> below, a random float between 0 and 1 (Math.random()) -->
-  <p></p>
+  <p> Problem 3 : {{randomNum()}} </p>
 
   <!-- ToDo 4: Pre-Populate this input with your name (set the "value" attribute) -->
   <div>
-    <input type="text">
+    Problem 4 :
+    <input type="text" v-bind:value=name>
   </div>
 
   <!-- ToDo 5: Show an alert when the Button gets clicked -->
   <div>
-    <button>Show Alert</button>
+    Problem 5 : 
+    <button v-on:click="alertMe">Show Alert</button>
   </div>
 
   <!-- ToDo 6: Listen to the "keydown" event and store the value in a data property (hint: event.target.value gives you the value) -->
   <div>
-    <input type="text">
-    <p>{{ value }}</p>
+    Problem 6 : 
+    <input type="text" v-on:input="dynamicText">
+    <p>{{title }}</p>
   </div>
   
    <!-- ToDo 7: Start the Effect with the Button. The Effect should alternate the "highlight" or "shrink" class on each new setInterval tick (attach respective class to the div with id "effect" below) -->
@@ -58,7 +61,9 @@
 
  <!-- ToDo 10: Output an <ul> of array elements of your choice. Also print the index of each element. -->
  <ul>
-   <li></li>
+  <li v-for="list of fruits" :key="food.fruits">
+    {{ food.fruits }}
+  </li>
  </ul>
  </div>
  <script src="app.js"></script>
